fix: topnav bar and product navbar z-index

--- a/src/assets/css/header/header.css
+++ b/src/assets/css/header/header.css
@@ -54,7 +54,7 @@
   background-color: #fff;
   width: 100%;
   text-align: left;
-  z-index: 1;
+  z-index: 2;
 }
 
 .subnav-content .common-subcategory {
